[gd_scene load_steps=2 format=2]

[ext_resource path="res://Map/Map.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 315.0
margin_top = 148.0
margin_right = 541.0
margin_bottom = 837.0
rect_scale = Vector2( 3, 3 )

[node name="Lv2Direct" type="Button" parent="VBoxContainer"]
margin_right = 226.0
margin_bottom = 20.0
text = "Lv2"

[node name="Lv3Direct" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 226.0
margin_bottom = 44.0
text = "Lv3"

[node name="Lv4Direct" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 226.0
margin_bottom = 68.0
text = "Lv4"

[node name="Lv5Direct" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 226.0
margin_bottom = 92.0
text = "Lv5"

[node name="MaptoMenu" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 226.0
margin_bottom = 116.0
text = "Return to the Main Menu"
script = ExtResource( 2 )

[connection signal="button_up" from="VBoxContainer/Lv2Direct" to="VBoxContainer/MaptoMenu" method="_on_Lv2Direct_button_up"]
[connection signal="button_up" from="VBoxContainer/Lv3Direct" to="VBoxContainer/MaptoMenu" method="_on_Lv3Direct_button_up"]
[connection signal="button_down" from="VBoxContainer/MaptoMenu" to="VBoxContainer/MaptoMenu" method="_on_MaptoMenu_button_down"]
